<resources>
  <string name="app_name">Bard</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Bard</string>
  <string name="nav_header_subtitle">Musical Accompaniment</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="sign_out">Sign out</string>

  <string name="menu_session">Session</string>
  <string name="menu_tasks">Tasks</string>
  <string name="menu_music">Music</string>
  <string name="add_task">Add Task</string>
  <string name="add_task_type">Add Task Type</string>
  <string name="song_name">Name</string>
  <string name="artist_name">Artist</string>
  <string name="album_name">Album</string>
  <string name="task_name">Name</string>
  <string name="task_description">Description</string>
  <string name="task_duration">Duration (mins)</string>

  <string name="new_task_condensed">Add</string>
  <string name="task_type_name_hint">Name</string>
  <string name="task_type_description_hint">Description</string>
  <string name="task_type_duration_hint">Duration (minutes)</string>
  <string name="create_task_type_properties_title">Create New Task Type</string>
</resources>