<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_session">

  <fragment
    android:id="@+id/nav_session"
    android:label="@string/menu_session"
    android:name="edu.cnm.deepdive.bard.controller.ui.session.SessionFragment"
    tools:layout="@layout/fragment_session"/>

  <fragment
    android:id="@+id/nav_task"
    android:label="@string/menu_tasks"
    android:name="edu.cnm.deepdive.bard.controller.ui.task.TaskFragment"
    tools:layout="@layout/fragment_task"/>

  <fragment
    android:id="@+id/nav_music"
    android:label="@string/menu_music"
    android:name="edu.cnm.deepdive.bard.controller.ui.music.MusicFragment"
    tools:layout="@layout/fragment_music"/>
</navigation>